@@ -8,18 +8,11 @@
  */
 
 #include "tcpflow.h"
+#include "bulk_extractor_i.h"
 
 #include <iostream>
 #include <sstream>
 
-#define ZLIB_CONST
-#ifdef GNUC_HAS_DIAGNOSTIC_PRAGMA
-#  pragma GCC diagnostic ignored "-Wundef"
-#  pragma GCC diagnostic ignored "-Wcast-qual"
-#endif
-#ifdef HAVE_ZLIB_H
-#include <zlib.h>
-#endif
 
 
 
@@ -51,46 +44,6 @@ tcpip::tcpip(tcpdemux &demux_,const flow &flow_,tcp_seq isn_):
 }
 
 
-#ifdef HAVE_SYS_MMAN_H
-#include <sys/mman.h>
-#endif
-
-/* This could be much more efficient */
-const char *find_crlfcrlf(const char *base,size_t len)
-{
-    while(len>4){
-	if(base[0]=='\r' && base[1]=='\n' && base[2]=='\r' && base[3]=='\n'){
-	    return base;
-	}
-	len--;
-	base++;
-    }
-    return 0;
-}
-
-
-/**
- * fake implementation of mmap and munmap if we don't have them
- */
-#if !defined(HAVE_MMAP)
-#define PROT_READ 0
-#define MAP_FILE 0
-#define MAP_SHARED 0
-void *mmap(void *addr,size_t length,int prot, int flags, int fd, off_t offset)
-{
-    void *buf = (void *)malloc(length);
-    if(!buf) return 0;
-    read(fd,buf,length);			// should explore return code
-    return buf;
-}
-
-void munmap(void *buf,size_t size)
-{
-    free(buf);
-}
-
-#endif
-
 /**
  * Destructor is called when flow is closed.
  * It implements "after" processing.
@@ -108,50 +61,8 @@ tcpip::~tcpip()
 
     if(demux.opt.opt_after_header && file_created){
 	/* open the file and see if it is a HTTP header */
-	int fd2 = demux.retrying_open(flow_pathname.c_str(),O_RDONLY|O_BINARY,0);
-	if(fd2<0){
-	    perror("open");
-	}
-	else {
-	    char buf[4096];
-	    ssize_t len;
-	    len = read(fd2,buf,sizeof(buf)-1);
-	    if(len>0){
-		buf[len] = 0;		// be sure it is null terminated
-		if(strncmp(buf,"HTTP/1.1 ",9)==0){
-		    /* Looks like a HTTP response. Split it.
-		     * We do this with memmap  because, quite frankly, it's easier.
-		     */
-		    struct stat st;
-		    if(fstat(fd2,&st)==0){
-			void *base = mmap(0,st.st_size,PROT_READ,MAP_FILE|MAP_SHARED,fd2,0);
-			const char *crlf = find_crlfcrlf((const char *)base,st.st_size);
-			if(crlf){
-			    ssize_t head_size = crlf - (char *)base + 2;
-			    demux.write_to_file(byte_runs,
-					  flow_pathname+"-HTTP",
-					  (const uint8_t *)base,(const uint8_t *)base,head_size);
-			    if(st.st_size > head_size+4){
-				size_t body_size = st.st_size - head_size - 4;
-				demux.write_to_file(byte_runs,
-					      flow_pathname+"-HTTPBODY",
-					      (const uint8_t  *)base,(const uint8_t  *)crlf+4,body_size);
-#ifdef HAVE_LIBZ
-				if(demux.opt.opt_gzip_decompress){
-				    process_gzip(byte_runs,
-						 flow_pathname+"-HTTPBODY-GZIP",(unsigned char *)crlf+4,body_size);
-				}
-#endif
-			    }
-			}
-			munmap(base,st.st_size);
-		    }
-		}
-	    }
-	    close(fd2);
-	}
+	demux.post_process_capture_file(byte_runs,flow_pathname);
     }
-
     if(demux.xreport){
 	demux.xreport->push(fileobject_str);
 	if(flow_pathname.size()) demux.xreport->xmlout(filename_str,flow_pathname);
@@ -184,36 +95,6 @@ tcpip::~tcpip()
     }
 }
 
-
-#ifdef HAVE_LIBZ
-void tcpip::process_gzip(std::stringstream &ss,
-			 const std::string &fname,const unsigned char *base,size_t len)
-{
-    if((len>4) && (base[0]==0x1f) && (base[1]==0x8b) && (base[2]==0x08) && (base[3]==0x00)){
-	size_t uncompr_size = len * 16;
-	unsigned char *decompress_buf = (unsigned char *)malloc(uncompr_size);
-	if(decompress_buf==0) return;	// too big?
-
-	z_stream zs;
-	memset(&zs,0,sizeof(zs));
-	zs.next_in = (Bytef *)base; // note that next_in should be typedef const but is not
-	zs.avail_in = len;
-	zs.next_out = decompress_buf;
-	zs.avail_out = uncompr_size;
-		
-	int r = inflateInit2(&zs,16+MAX_WBITS);
-	if(r==0){
-	    r = inflate(&zs,Z_SYNC_FLUSH);
-	    /* Ignore the error return; process data if we got anything */
-	    if(zs.total_out>0){
-		demux.write_to_file(ss,fname,decompress_buf,decompress_buf,zs.total_out);
-	    }
-	    inflateEnd(&zs);
-	}
-	free(decompress_buf);
-    }
-}
-#endif
 
 
 /* Closes the file belonging to a flow.
