@@ -1,3 +1,9 @@
+2012-11-14  Simson Garfinkel  <simsong@npsair.local>
+
+	* src/plugin.cpp (process_sbuf): renamed process_extract to process_sbuf and put it here.
+
+	* src/main.cpp (main): renamed main.cpp to tcpflow.cpp
+
 2012-11-05  Simson Garfinkel  <simsong@npsair.local>
 
 	* src/main.cpp (main): print_usage() renamed usage() for consistency with bulk_extractor
